# lfi

libsobox/: proc.c  sobox.h
libsobox/test/: lib.c
rust/: Cargo.toml
rust/encapfn-lfi/: Cargo.toml  build.rs.old  shell.nix
rust/encapfn-lfi/src/: lib.rs  libc_bindings.rs
rust/lfi-run-rs/: Cargo.toml
rust/lfi-run-rs/src/: main.rs
rust/liblfi-sys/: Cargo.toml  build.rs  wrapper.h
rust/liblfi-sys/src/: lib.rs
rust/libsobox-sys/: Cargo.toml  build.rs  wrapper.h
rust/libsobox-sys/src/: lib.rs
rust/sobox-test-rs/: Cargo.toml
rust/sobox-test-rs/src/: main.rs
rust/tests/lfi-sobox-test/: Cargo.toml  build.rs  encapfn-lfi-libsobox-test.encapfn.toml
rust/tests/lfi-sobox-test/src/: lib.rs  main.rs
