[workspace]
resolver = "2"
members = [
    "libsobox-sys",
    "encapfn-lfi",
    "tests/lfi-sobox-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.encapfn]
#git = "https://github.com/encapfn/encapfn"
#rev = "e119560ed64c2ef5bc6e98b5992eeb4db6736e12"
path = "../../encapfn"
features = [ "std" ]

[workspace.dependencies.bindgen]
#git = "https://github.com/encapfn/rust-bindgen"
#rev = ""
path = "../../rust-bindgen/bindgen"

